norxold/config.nim


proc isDynamicValue*(zKey: cstring): orxBOOL {.cdecl,
    importc: "orxConfig_IsDynamicValue", dynlib: libORX.}
  ## Is this value dynamic? (ie. random and/or a list or command)
  ##  @param[in] _zKey             Key name
  ##  @return orxTRUE / orxFALSE

proc isCommandValue*(zKey: cstring): orxBOOL {.cdecl,
    importc: "orxConfig_IsCommandValue", dynlib: libORX.}
  ## Is this a command value? (ie. lazily evaluated command: %...)
  ##  @param[in] _zKey             Key name
  ##  @return orxTRUE / orxFALSE

proc hasValue*(zKey: cstring): orxBOOL {.cdecl,
    importc: "orxConfig_HasValue", dynlib: libORX.}
  ## Has specified value for the given key?
  ##  @param[in] _zKey             Key name
  ##  @return orxTRUE / orxFALSE

proc getValueSource*(zKey: cstring): cstring {.cdecl,
    importc: "orxConfig_GetValueSource", dynlib: libORX.}
  ## Gets a value's source section (ie. the section where the value is explicitly defined), only considering section inheritance, not local one
  ##  @param[in] _zKey             Key name
  ##  @return Name of the section that explicitly contains the value, orxSTRING_EMPTY if not found

proc getS32*(zKey: cstring): orxS32 {.cdecl,
    importc: "orxConfig_GetS32", dynlib: libORX.}
  ## Reads a signed integer value from config (will take a random value if a list is provided for this key)
  ##  @param[in] _zKey             Key name
  ##  @return The value

proc getU32*(zKey: cstring): orxU32 {.cdecl,
    importc: "orxConfig_GetU32", dynlib: libORX.}
  ## Reads an unsigned integer value from config (will take a random value if a list is provided for this key)
  ##  @param[in] _zKey             Key name
  ##  @return The value

proc getS64*(zKey: cstring): orxS64 {.cdecl,
    importc: "orxConfig_GetS64", dynlib: libORX.}
  ## Reads a signed integer value from config (will take a random value if a list is provided for this key)
  ##  @param[in] _zKey             Key name
  ##  @return The value

proc getU64*(zKey: cstring): orxU64 {.cdecl,
    importc: "orxConfig_GetU64", dynlib: libORX.}
  ## Reads an unsigned integer value from config (will take a random value if a list is provided for this key)
  ##  @param[in] _zKey             Key name
  ##  @return The value

proc getFloat*(zKey: cstring): orxFLOAT {.cdecl,
    importc: "orxConfig_GetFloat", dynlib: libORX.}
  ## Reads a float value from config (will take a random value if a list is provided for this key)
  ##  @param[in] _zKey             Key name
  ##  @return The value

proc getString*(zKey: cstring): cstring {.cdecl,
    importc: "orxConfig_GetString", dynlib: libORX.}
  ## Reads a string value from config (will take a random value if a list is provided for this key)
  ##  @param[in] _zKey             Key name
  ##  @return The value

proc getBool*(zKey: cstring): orxBOOL {.cdecl,
    importc: "orxConfig_GetBool", dynlib: libORX.}
  ## Reads a boolean value from config (will take a random value if a list is provided for this key)
  ##  @param[in] _zKey             Key name
  ##  @return The value

proc getVector*(zKey: cstring; pvVector: ptr orxVECTOR): ptr orxVECTOR {.
    cdecl, importc: "orxConfig_GetVector", dynlib: libORX.}
  ## Reads a vector value from config (will take a random value if a list is provided for this key)
  ##  @param[in]   _zKey             Key name
  ##  @param[out]  _pvVector         Storage for vector value
  ##  @return The value if valid, orxNULL otherwise

proc duplicateRawValue*(zKey: cstring): cstring {.cdecl,
    importc: "orxConfig_DuplicateRawValue", dynlib: libORX.}
  ## Duplicates a raw value (string) from config
  ##  @param[in] _zKey             Key name
  ##  @return The value. If non-null, needs to be deleted by the caller with orxString_Delete()

proc setS32*(zKey: cstring; s32Value: orxS32): orxSTATUS {.cdecl,
    importc: "orxConfig_SetS32", dynlib: libORX.}
  ## Writes a signed integer value to config
  ##  @param[in] _zKey             Key name
  ##  @param[in] _s32Value         Value
  ##  @return orxSTATUS_SUCCESS / orxSTATUS_FAILURE

proc setU32*(zKey: cstring; u32Value: orxU32): orxSTATUS {.cdecl,
    importc: "orxConfig_SetU32", dynlib: libORX.}
  ## Writes an unsigned integer value to config
  ##  @param[in] _zKey             Key name
  ##  @param[in] _u32Value         Value
  ##  @return orxSTATUS_SUCCESS / orxSTATUS_FAILURE

proc setS64*(zKey: cstring; s64Value: orxS64): orxSTATUS {.cdecl,
    importc: "orxConfig_SetS64", dynlib: libORX.}
  ## Writes a signed integer value to config
  ##  @param[in] _zKey             Key name
  ##  @param[in] _s64Value         Value
  ##  @return orxSTATUS_SUCCESS / orxSTATUS_FAILURE

proc setU64*(zKey: cstring; u64Value: orxU64): orxSTATUS {.cdecl,
    importc: "orxConfig_SetU64", dynlib: libORX.}
  ## Writes an unsigned integer value to config
  ##  @param[in] _zKey             Key name
  ##  @param[in] _u64Value         Value
  ##  @return orxSTATUS_SUCCESS / orxSTATUS_FAILURE

proc setFloat*(zKey: cstring; fValue: orxFLOAT): orxSTATUS {.cdecl,
    importc: "orxConfig_SetFloat", dynlib: libORX.}
  ## Writes a float value to config
  ##  @param[in] _zKey             Key name
  ##  @param[in] _fValue           Value
  ##  @return orxSTATUS_SUCCESS / orxSTATUS_FAILURE

proc setString*(zKey: cstring; zValue: cstring): orxSTATUS {.cdecl,
    importc: "orxConfig_SetString", dynlib: libORX.}
  ## Writes a string value to config
  ##  @param[in] _zKey             Key name
  ##  @param[in] _zValue           Value
  ##  @return orxSTATUS_SUCCESS / orxSTATUS_FAILURE

proc setStringBlock*(zKey: cstring; zValue: cstring): orxSTATUS {.
    cdecl, importc: "orxConfig_SetStringBlock", dynlib: libORX.}
  ## Writes a string value to config, in block mode
  ##  @param[in] _zKey             Key name
  ##  @param[in] _zValue           Value to write in block mode
  ##  @return orxSTATUS_SUCCESS / orxSTATUS_FAILURE

proc setBool*(zKey: cstring; bValue: orxBOOL): orxSTATUS {.cdecl,
    importc: "orxConfig_SetBool", dynlib: libORX.}
  ## Writes a boolean value to config
  ##  @param[in] _zKey             Key name
  ##  @param[in] _bValue           Value
  ##  @return orxSTATUS_SUCCESS / orxSTATUS_FAILURE

proc setVector*(zKey: cstring; pvValue: ptr orxVECTOR): orxSTATUS {.cdecl,
    importc: "orxConfig_SetVector", dynlib: libORX.}
  ## Writes a vector value to config
  ##  @param[in] _zKey             Key name
  ##  @param[in] _pvValue          Value
  ##  @return orxSTATUS_SUCCESS / orxSTATUS_FAILURE

proc isList*(zKey: cstring): orxBOOL {.cdecl,
    importc: "orxConfig_IsList", dynlib: libORX.}
  ## Is value a list for the given key?
  ##  @param[in] _zKey             Key name
  ##  @return orxTRUE / orxFALSE

proc getListCount*(zKey: cstring): orxS32 {.cdecl,
    importc: "orxConfig_GetListCount", dynlib: libORX.}
  ## Gets list count for a given key
  ##  @param[in] _zKey             Key name
  ##  @return List count if it's a valid list, 0 otherwise

proc getListS32*(zKey: cstring; s32ListIndex: orxS32): orxS32 {.cdecl,
    importc: "orxConfig_GetListS32", dynlib: libORX.}
  ## Reads a signed integer value from config list
  ##  @param[in] _zKey             Key name
  ##  @param[in] _s32ListIndex     Index of desired item in list / -1 for random
  ##  @return The value

proc getListU32*(zKey: cstring; s32ListIndex: orxS32): orxU32 {.cdecl,
    importc: "orxConfig_GetListU32", dynlib: libORX.}
  ## Reads an unsigned integer value from config list
  ##  @param[in] _zKey             Key name
  ##  @param[in] _s32ListIndex     Index of desired item in list / -1 for random
  ##  @return The value

proc getListS64*(zKey: cstring; s32ListIndex: orxS32): orxS64 {.cdecl,
    importc: "orxConfig_GetListS64", dynlib: libORX.}
  ## Reads a signed integer value from config list
  ##  @param[in] _zKey             Key name
  ##  @param[in] _s32ListIndex     Index of desired item in list / -1 for random
  ##  @return The value

proc getListU64*(zKey: cstring; s32ListIndex: orxS32): orxU64 {.cdecl,
    importc: "orxConfig_GetListU64", dynlib: libORX.}
  ## Reads an unsigned integer value from config list
  ##  @param[in] _zKey             Key name
  ##  @param[in] _s32ListIndex     Index of desired item in list / -1 for random
  ##  @return The value

proc getListFloat*(zKey: cstring; s32ListIndex: orxS32): orxFLOAT {.
    cdecl, importc: "orxConfig_GetListFloat", dynlib: libORX.}
  ## Reads a float value from config list
  ##  @param[in] _zKey             Key name
  ##  @param[in] _s32ListIndex     Index of desired item in list / -1 for random
  ##  @return The value

proc getListString*(zKey: cstring; s32ListIndex: orxS32): cstring {.
    cdecl, importc: "orxConfig_GetListString", dynlib: libORX.}
  ## Reads a string value from config list
  ##  @param[in] _zKey             Key name
  ##  @param[in] _s32ListIndex     Index of desired item in list / -1 for random
  ##  @return The value

proc getListBool*(zKey: cstring; s32ListIndex: orxS32): orxBOOL {.cdecl,
    importc: "orxConfig_GetListBool", dynlib: libORX.}
  ## Reads a boolean value from config list
  ##  @param[in] _zKey             Key name
  ##  @param[in] _s32ListIndex     Index of desired item in list / -1 for random
  ##  @return The value

proc getListVector*(zKey: cstring; s32ListIndex: orxS32;
                             pvVector: ptr orxVECTOR): ptr orxVECTOR {.cdecl,
    importc: "orxConfig_GetListVector", dynlib: libORX.}
  ## Reads a vector value from config list
  ##  @param[in]   _zKey             Key name
  ##  @param[in]   _s32ListIndex     Index of desired item in list / -1 for random
  ##  @param[out]  _pvVector         Storage for vector value
  ##  @return The value

proc setListString*(zKey: cstring; azValue: cstringArray;
                             u32Number: orxU32): orxSTATUS {.cdecl,
    importc: "orxConfig_SetListString", dynlib: libORX.}
  ## Writes a list of string values to config
  ##  @param[in] _zKey             Key name
  ##  @param[in] _azValue          Values
  ##  @param[in] _u32Number        Number of values
  ##  @return orxSTATUS_SUCCESS / orxSTATUS_FAILURE

proc appendListString*(zKey: cstring; azValue: cstringArray;
                                u32Number: orxU32): orxSTATUS {.cdecl,
    importc: "orxConfig_AppendListString", dynlib: libORX.}
  ## Appends string values to a config list (will create a new entry if not already present)
  ##  @param[in] _zKey             Key name
  ##  @param[in] _azValue          Values
  ##  @param[in] _u32Number        Number of values
  ##  @return orxSTATUS_SUCCESS / orxSTATUS_FAILURE

proc getKeyCount*(): orxU32 {.cdecl, importc: "orxConfig_GetKeyCount",
                                     dynlib: libORX.}
  ## Gets key count of the current section
  ##  @return Key count of the current section if valid, 0 otherwise

proc getKey*(u32KeyIndex: orxU32): cstring {.cdecl,
    importc: "orxConfig_GetKey", dynlib: libORX.}
  ## Gets key for the current section at the given index
  ##  @param[in] _u32KeyIndex      Index of the desired key
  ##  @return orxSTRING if exist, orxSTRING_EMPTY otherwise
